--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ga</groupId>
-  <artifactId>advanced-project</artifactId>
+  <artifactId>d20-2d-objects</artifactId></artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Advanced Project</name>
-  <description>Basic structure for automation only</description>
+  <name>d20-2d-objects</name>
+  <description>Basic structure for automation and 2d objects</description>
   	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
